# Documentazione

./: .gitignore  TODO_PostMWR.txt  aliasHOWTO.txt  fourLayer_project_.txt
20220701_Iterator_/: 20220701_Iterator_.cbp  20220701_Iterator_.depend  20220701_Iterator_.layout  main.cpp
20220703_Map_/: 20220703_Map_.cbp  20220703_Map_.depend  20220703_Map_.layout  20220703_Map_.layout.save  interni_IT_.txt  interni_IT_.xml  main.cpp  main.cpp.save  out20171230_.txt  phoneBook_.xml  telExport_.txt  telExport_Excel_.xml  valgrind_HOWTO_.txt
20220724_regex_/: 20220724_regex_.cbp  20220724_regex_.depend  main.cpp
Bulk/: BULK_viaMultiSingle_Insert_.sql  NumDump2021.txt
DB/: 100210_Riemann_verifiche_.txt  100429_ITBZOW1071_campo_Object_.txt  100622_ITBZOW1071_bugMultipleResults_.txt  100623_Riemann_bugMultipleResults_.txt  100707_Riemann_cvdb_.txt  100708_ITBZOW1071_RowNumber_.txt  100708_ITBZOW1071_dataCacher_.txt  100709_Riemann_cvDb_pagerView_.txt  100713_ITBZOW1071_usp_candidato_VIEW_length_.txt  100714_ITBZOW1071_cv_db_.txt  100924_ITBZOW1071_materie_.txt  101005_192_168_4_12_materie_.txt  101005_192_168_4_12_materie_2_.txt  101006_192_168_4_12_materie_script_.txt  101007_192_168_4_12_materie_docMulti_.txt  101008_ITBZOW1071_materie_consignee_.txt  101008_ITBZOW1071_materie_feeding_.txt  101011_ITBZOW1071_hw_Log&Primes_.txt  101110_pr_RebuildIndexes.sql.txt  101116_indexedView_.txt  110117_Riemann_correzione_doc_multi_.txt  110214_ITBZOW1071_ErrorLogStorage_.txt  20131219_LucaSalvi_.sql  (+178 more)
RustBriko/test_console/: Cargo.toml
RustBriko/test_console/src/: main.rs
(+533 files in other folders)
